# agent-eval

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  requirements.txt
.ci/: ci.yml
examples/: inefficient_run.json
queue/001/: diff.patch  msg.txt
queue/002/: diff.patch  msg.txt
queue/003/: diff.patch  msg.txt
queue/004/: diff.patch
queue/005/: diff.patch
queue/006/: diff.patch  msg.txt
queue/007/: diff.patch  msg.txt
queue/008/: diff.patch
queue/010/: diff.patch
queue/011/: diff.patch  msg.txt
queue/012/: diff.patch  msg.txt
queue/013/: diff.patch
